Dynamic page update

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -264,6 +264,11 @@ participantdate.volunteering.select.label=Would like to be
 participantdate.volunteering.add.label=as volunteer
 participantdata.would.like.to.add.message=This participant is not registered for {0}. Would you like to add this participant?
 
+# Extra related messages
+extra.label=Extra
+extra.multiple.label=Extras
+extra.extra.label=Extra
+
 # Paper related messages
 paper.label=Paper
 paper.multiple.label=Papers
