--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -263,6 +263,11 @@ participantdate.volunteering.select.label=Zou willen zijn
 participantdate.volunteering.add.label=als vrijwilliger
 participantdata.would.like.to.add.message=Deze participant is nog niet geregistreerd voor {0}. Wilt u deze participant toevoegen?
 
+# Extra related messages
+extra.label=Extra
+extra.multiple.label=Extras
+extra.extra.label=Extra
+
 # Paper related messages
 paper.label=Document
 paper.multiple.label=Documenten
