- CSS updated - Dynamic tables updated - Most back urls fixed - Added list: lower fee request, Invitation letters and extras

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -30,6 +30,7 @@ default.updated.message={0} is updated
 default.deleted.message={0} is deleted
 default.not.deleted.message={0} could not be deleted
 default.not.found.message={0} could not be found
+default.no.id.message=Please provide an id
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 default.successful.message=Saving was successful
 default.not.allowed.message=Unfortunately this is not allowed
@@ -80,11 +81,11 @@ spinner.alt=Loading...
 
 ## Security related messages
 # Login errors
-springSecurity.errors.login.expired=Sorry, your account has expired.
-springSecurity.errors.login.passwordExpired=Sorry, your password has expired.
-springSecurity.errors.login.disabled=Sorry, your account is disabled.
-springSecurity.errors.login.locked=Sorry, your account is locked.
-springSecurity.errors.login.fail=Sorry, we were not able to find a user with that login and password.
+springSecurity.errors.login.expired=Sorry, your account has expired
+springSecurity.errors.login.passwordExpired=Sorry, your password has expired
+springSecurity.errors.login.disabled=Sorry, your account is disabled
+springSecurity.errors.login.locked=Sorry, your account is locked
+springSecurity.errors.login.fail=Sorry, we were not able to find a user with that login and password
 
 # Login Page
 springSecurity.login.title=Login
@@ -100,13 +101,13 @@ springSecurity.forgot.title=Forgot password
 springSecurity.forgot.header=Request a new password
 springSecurity.forgot.button=New password
 springSecurity.forgot.username.label=Login
-springSecurity.forgot.error=Sorry, we couldn't create a new password for you at this moment.
-springSecurity.forgot.fail=Sorry. we were not able to find a user with that login.
-springSecurity.forgot.success=A new password has been send to you by mail.
+springSecurity.forgot.error=Sorry, we couldn't create a new password for you at this moment
+springSecurity.forgot.fail=Sorry. we were not able to find a user with that login
+springSecurity.forgot.success=A new password has been send to you by mail
 
 # Denied Page
 springSecurity.denied.title=Denied
-springSecurity.denied.message=Sorry, you're not authorized to view this page.
+springSecurity.denied.message=Sorry, you're not authorized to view this page
 
 #Logged in
 springSecurity.loggedin.welcome=Welcome {0}
@@ -248,11 +249,11 @@ participantdate.multiple.label=Participants
 participantdate.state.label=Current state
 participantdate.feestate.label=Current fee state
 participantdate.dateadded.label=Event date added
-participantdate.invitationletter.label=Inventation letter requested
-participantdate.invitationlettersent.label=Inventation letter sent
+participantdate.invitationletter.label=Requested
+participantdate.invitationlettersent.label=Sent
 participantdate.inventationletter.label=Inventation letter
-participantdate.lowerfeerequested.label=Lower fee requested
-participantdate.lowerfeeanswered.label=Lower fee answered
+participantdate.lowerfeerequested.label=Requested
+participantdate.lowerfeeanswered.label=Answered
 participantdate.lowerfee.label=Lower fee
 participantdate.lowerfeetext.label=Lower fee text
 participantdate.registrationinfo.label=Registration info
