--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -30,6 +30,7 @@ default.updated.message={0} is gewijzigd
 default.deleted.message={0} is verwijderd
 default.not.deleted.message={0} kon niet worden verwijderd
 default.not.found.message={0} kon niet worden gevonden
+default.no.id.message=Geef astublieft een id op
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
 default.successful.message=Opslaan was succesvol
 default.not.allowed.message=Helaas is dit niet toegestaan
@@ -78,11 +79,11 @@ typeMismatch.java.math.BigInteger=Attribuut {0} is geen geldig nummer
 
 ## Security related messages
 # Login errors
-springSecurity.errors.login.expired=Sorry, your account has expired.
-springSecurity.errors.login.passwordExpired=Sorry, your password has expired.
-springSecurity.errors.login.disabled=Sorry, uw account is disabled.
-springSecurity.errors.login.locked=Sorry, uw account is gesloten.
-springSecurity.errors.login.fail=Sorry, we konden geen gebruiker vinden met deze login/password combinatie.
+springSecurity.errors.login.expired=Sorry, uw account is verlopen
+springSecurity.errors.login.passwordExpired=Sorry, uw wachtwoord is verlopen
+springSecurity.errors.login.disabled=Sorry, uw account is uitgezet
+springSecurity.errors.login.locked=Sorry, uw account is gesloten
+springSecurity.errors.login.fail=Sorry, we konden geen gebruiker vinden met deze login/wachtwoord combinatie
 
 # Login Page
 springSecurity.login.title=Login
@@ -98,13 +99,13 @@ springSecurity.forgot.title=Wachtwoord vergeten
 springSecurity.forgot.header=Een nieuw wachtwoord aanvragen
 springSecurity.forgot.button=Nieuw wachtwoord
 springSecurity.forgot.username.label=Login
-springSecurity.forgot.error=Sorry, we konden geen nieuw wachtwoord voor u aanmaken op dit moment.
-springSecurity.forgot.fail=Sorry, we konden geen gebruiker vinden met deze login.
-springSecurity.forgot.success=Een nieuw wachtwoord is naar u gemaild.
+springSecurity.forgot.error=Sorry, we konden geen nieuw wachtwoord voor u aanmaken op dit moment
+springSecurity.forgot.fail=Sorry, we konden geen gebruiker vinden met deze login
+springSecurity.forgot.success=Een nieuw wachtwoord is naar u gemaild
 
 # Denied Page
 springSecurity.denied.title=Geen toegang
-springSecurity.denied.message=Sorry, u heeft geen toegang tot deze pagina.
+springSecurity.denied.message=Sorry, u heeft geen toegang tot deze pagina
 
 #Logged in
 springSecurity.loggedin.welcome=Welkom {0}
@@ -247,11 +248,11 @@ participantdate.multiple.label=Participants
 participantdate.state.label=Huidige status
 participantdate.feestate.label=Huidige vergoedings status
 participantdate.dateadded.label=Evenement datum toegevoegd
-participantdate.invitationletter.label=Uitnodigings brief aangevraagd
-participantdate.invitationlettersent.label=Uitnodigings brief verzonden
+participantdate.invitationletter.label=Aangevraagd
+participantdate.invitationlettersent.label=Verzonden
 participantdate.inventationletter.label=Uitnodigings brief
-participantdate.lowerfeerequested.label=Lagere vergoeding aangevraagd
-participantdate.lowerfeeanswered.label=Lagere vergoeding beantwoord
+participantdate.lowerfeerequested.label=Aangevraagd
+participantdate.lowerfeeanswered.label=Beantwoord
 participantdate.lowerfee.label=Lagere vergoeding
 participantdate.lowerfeetext.label=Lagere vergoeding tekst
 participantdate.registrationinfo.label=Registratie info
@@ -279,7 +280,7 @@ paper.networkproposal.label=Netwerk voorstel
 paper.sessionproposal.label=Sessie voorstel
 paper.proposaldescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Geüploade document
+paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
 paper.equipmentcomment.label=Apparatuur commentaar
 paper.networkssessionsinfo.label=Netwerken & Sessies informatie
