- New type of session planner (clicks instead of dragging) - Bug fixing

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -49,7 +49,8 @@ default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 default.overview.label={0} overview
-default.plan.label=Plan {0}
+default.plan.drag.label=Plan {0} (Drag)
+default.plan.click.label=Plan {0} (Click)
 
 default.enabled.label=Visible
 default.deleted.label=Delete
@@ -147,7 +148,7 @@ user.country.label=Country
 user.language.label=Language
 user.password.label=Password
 user.passwordagain.label=Password again
-user.password.nomatch=The passwords are not equal.
+user.password.nomatch=The passwords are not equal
 user.phone.label=Phone
 user.fax.label=Fax
 user.mobile.label=Mobile phone
@@ -263,7 +264,7 @@ participantdate.attendance.label=Attendance
 participantdate.volunteering.label=Volunteering
 participantdate.volunteering.select.label=Would like to be
 participantdate.volunteering.add.label=as volunteer
-participantdata.would.like.to.add.message=This participant is not registered for {0}. Would you like to add this participant?
+participantdata.would.like.to.add.message=This user is not registered for {0}. Would you like to add this user as a participant?
 
 # Extra related messages
 extra.label=Extra
