--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -49,7 +49,8 @@ default.create.label=Invoeren {0}
 default.show.label=Details {0}
 default.edit.label=Wijzig {0}
 default.overview.label={0} overzicht
-default.plan.label=Plan {0}
+default.plan.drag.label=Plan {0} (Sleep)
+default.plan.click.label=Plan {0} (Klik)
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
@@ -243,8 +244,8 @@ participantstate.multiple.label=Deelnemer statussen
 participantstate.state.label=Status
 
 # Participant date related messages
-participantdate.label=Participant
-participantdate.multiple.label=Participants
+participantdate.label=Deelnemer
+participantdate.multiple.label=Deelnemers
 participantdate.state.label=Huidige status
 participantdate.feestate.label=Huidige vergoedings status
 participantdate.dateadded.label=Evenement datum toegevoegd
@@ -262,7 +263,7 @@ participantdate.attendance.label=Aaanwezigheid
 participantdate.volunteering.label=Vrijwilliger mogelijkheden
 participantdate.volunteering.select.label=Zou willen zijn
 participantdate.volunteering.add.label=als vrijwilliger
-participantdata.would.like.to.add.message=Deze participant is nog niet geregistreerd voor {0}. Wilt u deze participant toevoegen?
+participantdata.would.like.to.add.message=Deze gebruiker is nog niet geregistreerd voor {0}. Wilt u deze gebruiker als deelnemer toevoegen?
 
 # Extra related messages
 extra.label=Extra
@@ -280,7 +281,7 @@ paper.networkproposal.label=Netwerk voorstel
 paper.sessionproposal.label=Sessie voorstel
 paper.proposaldescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Ge\u00c3\u00bcploade document
+paper.file.label=Geüploade document
 paper.file.upload.label=Upload document
 paper.equipmentcomment.label=Apparatuur commentaar
 paper.networkssessionsinfo.label=Netwerken & Sessies informatie
