--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -49,6 +49,7 @@ default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 default.overview.label={0} overview
+default.send.label=Send {0}
 default.plan.drag.label=Plan {0} (Drag)
 default.plan.click.label=Plan {0} (Click)
 
@@ -304,3 +305,6 @@ emailtemplate.sender.label=Sender
 emailtemplate.comment.label=Comment
 emailtemplate.testemail.label=Send test email to
 emailtemplate.testaftersave.label=Test email after save
+
+# Other relevant messages
+email.label=E-mail
