--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -48,6 +48,7 @@ default.new.label=Invoeren {0}
 default.create.label=Invoeren {0}
 default.show.label=Details {0}
 default.edit.label=Wijzig {0}
+default.send.label=Verstuur {0}
 default.overview.label={0} overzicht
 default.plan.drag.label=Plan {0} (Sleep)
 default.plan.click.label=Plan {0} (Klik)
@@ -221,7 +222,7 @@ session.multiple.label=Sessies
 session.code.label=Code
 session.name.label=Naam
 session.comment.label=Commentaar
-session.sessionparticipants.label=Participants in sessie
+session.sessionparticipants.label=Deelnemers in sessie
 
 # Fee state related messages
 feestate.label=Vergoedings status
@@ -303,3 +304,6 @@ emailtemplate.sender.label=Afzender
 emailtemplate.comment.label=Commentaar
 emailtemplate.testemail.label=Verstuur test e-mail naar
 emailtemplate.testaftersave.label=Na opslaan e-mail testen
+
+# Other relevant messages
+email.label=E-mail
