Updated session/network overview & edit pages to include more information about the participants scheduled

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -50,6 +50,7 @@ default.show.label=Show {0}
 default.edit.label=Edit {0}
 default.overview.label={0} overview
 default.send.label=Send {0}
+default.load.label=Load {0}
 default.plan.drag.label=Plan {0} (Drag)
 default.plan.click.label=Plan {0} (Click)
 
@@ -191,6 +192,7 @@ network.url.label=URL
 network.showonline.label=Show online
 network.showinternal.label=Show internal
 network.chairs.label=Chairs
+network.not.in.participants.label=Participants not in network
 
 # Network chair related messages
 networkchair.chair.label=Chair
