--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -49,6 +49,7 @@ default.create.label=Invoeren {0}
 default.show.label=Details {0}
 default.edit.label=Wijzig {0}
 default.send.label=Verstuur {0}
+default.load.label=Laad {0}
 default.overview.label={0} overzicht
 default.plan.drag.label=Plan {0} (Sleep)
 default.plan.click.label=Plan {0} (Klik)
@@ -190,6 +191,7 @@ network.url.label=URL
 network.showonline.label=Online weergeven
 network.showinternal.label=Intern weergeven
 network.chairs.label=Chairs
+network.not.in.participants.label=Deelnemer niet in netwerk
 
 # Network chair related messages
 networkchair.chair.label=Chair
