Small bugs fixed

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,19 +1,19 @@
-default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
-default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
-default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
-default.invalid.email.message=Property [{0}] of class [{1}] with value [{2}] is not a valid e-mail address
-default.invalid.range.message=Property [{0}] of class [{1}] with value [{2}] does not fall within the valid range from [{3}] to [{4}]
-default.invalid.size.message=Property [{0}] of class [{1}] with value [{2}] does not fall within the valid size range from [{3}] to [{4}]
-default.invalid.max.message=Property [{0}] of class [{1}] with value [{2}] exceeds maximum value [{3}]
-default.invalid.min.message=Property [{0}] of class [{1}] with value [{2}] is less than minimum value [{3}]
-default.invalid.max.size.message=Property [{0}] of class [{1}] with value [{2}] exceeds the maximum size of [{3}]
-default.invalid.min.size.message=Property [{0}] of class [{1}] with value [{2}] is less than the minimum size of [{3}]
-default.invalid.validator.message=Property [{0}] of class [{1}] with value [{2}] does not pass custom validation
-default.not.inlist.message=Property [{0}] of class [{1}] with value [{2}] is not contained within the list [{3}]
-default.blank.message=Property [{0}] of class [{1}] cannot be blank
-default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
-default.null.message=Property [{0}] of class [{1}] cannot be null
-default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
+default.doesnt.match.message={0} with value "{2}" does not match the required pattern "{3}"
+default.invalid.url.message={0} with value "{2}" is not a valid URL
+default.invalid.creditCard.message={0} with value "{2}" is not a valid credit card number
+default.invalid.email.message={0} with value "{2}" is not a valid e-mail address
+default.invalid.range.message={0} with value "{2}" does not fall within the valid range from {3} to {4}
+default.invalid.size.message={0} with value "{2}" does not fall within the valid size range from {3} to {4}
+default.invalid.max.message={0} with value "{2}" exceeds maximum value {3}
+default.invalid.min.message={0} with value "{2}" is less than minimum value {3}
+default.invalid.max.size.message={0} with value "{2}" exceeds the maximum size of {3}
+default.invalid.min.size.message={0} with value "{2}" is less than the minimum size of {3}
+default.invalid.validator.message={0} with value "{2}" does not pass custom validation
+default.not.inlist.message={0} with value "{2}" is not contained within the list {3}
+default.blank.message={0} cannot be blank
+default.not.equal.message={0} with value "{2}" cannot equal "{3}"
+default.null.message={0} cannot be empty
+default.not.unique.message={0} with value "{2}" must be unique
 
 default.paginate.prev=Previous
 default.paginate.next=Next
@@ -132,56 +132,56 @@ setting.property.label=Property
 setting.value.label=Value
 
 # Requestmap related messages
-requestmap.label=Request map
-requestmap.multiple.label=Request maps
-requestmap.url.label=URL
-requestmap.configattribute.label=Config attribute
+requestMap.label=Request map
+requestMap.multiple.label=Request maps
+requestMap.url.label=URL
+requestMap.configAttribute.label=Config attribute
 
 # User related messages
 user.label=User
 user.multiple.label=Users
 user.email.label=Email
-user.lastname.label=Last name
-user.firstname.label=First name
+user.lastName.label=Last name
+user.firstName.label=First name
 user.gender.label=Gender
 user.address.label=Address
 user.city.label=City
 user.country.label=Country
 user.language.label=Language
 user.password.label=Password
-user.passwordagain.label=Password again
+user.passwordAgain.label=Password again
 user.password.nomatch=The passwords are not equal
 user.phone.label=Phone
 user.fax.label=Fax
 user.mobile.label=Mobile phone
 user.organisation.label=Organisation
 user.department.label=Department
-user.extrainfo.label=Extra information
-user.dateadded.label=Date added
+user.extraInfo.label=Extra information
+user.dateAdded.label=Date added
 
 # Event related messages
 event.label=Event
 event.multiple.label=Events
 event.code.label=Code
-event.shortname.label=Short name
-event.longname.label=Long name
+event.shortName.label=Short name
+event.longName.label=Long name
 event.type.label=Type
 
 # Event date related messages
-eventdate.label=Event date
-eventdate.multiple.label=Dates
-eventdate.yearcode.label=Year code
-eventdate.startdate.label=Start date
-eventdate.enddate.label=End date
-eventdate.dateastext.label=Date as text
-eventdate.description.label=Description
-eventdate.longdescription.label=Long description
+eventDate.label=Event date
+eventDate.multiple.label=Dates
+eventDate.yearCode.label=Year code
+eventDate.startDate.label=Start date
+eventDate.endDate.label=End date
+eventDate.dateAsText.label=Date as text
+eventDate.description.label=Description
+eventDate.longDescription.label=Long description
 
 # Day related messages
 day.label=Day
 day.multiple.label=Days
 day.day.label=Day
-day.daynumber.label=Day number
+day.dayNumber.label=Day number
 
 # Network related messages
 network.label=Network
@@ -189,14 +189,14 @@ network.multiple.label=Networks
 network.name.label=Name
 network.comment.label=Comment
 network.url.label=URL
-network.showonline.label=Show online
-network.showinternal.label=Show internal
+network.showOnline.label=Show online
+network.showInternal.label=Show internal
 network.chairs.label=Chairs
 network.not.in.participants.label=Participants not in network
 
 # Network chair related messages
-networkchair.chair.label=Chair
-networkchair.ismainchair.label=Main chair
+networkChair.chair.label=Chair
+networkChair.isMainChair.label=Main chair
 
 # Title related messages
 title.label=Title
@@ -206,9 +206,9 @@ title.title.label=Title
 # Room related messages
 room.label=Room
 room.multiple.label=Rooms
-room.roomname.label=Room name
-room.roomnumber.label=Room number
-room.noofseats.label=Number of seats
+room.roomName.label=Room name
+room.roomNumber.label=Room number
+room.noOfSeats.label=Number of seats
 room.comment.label=Comments
 
 # Equipment related messages
@@ -217,7 +217,7 @@ equipment.multiple.label=Equipment
 equipment.code.label=Code
 equipment.equipment.label=Equipment
 equipment.description.label=Description
-equipment.imageurl.label=Image URL
+equipment.imageUrl.label=Image URL
 
 # Session related messages
 session.label=Session
@@ -225,49 +225,49 @@ session.multiple.label=Sessions
 session.code.label=Code
 session.name.label=Name
 session.comment.label=Comment
-session.sessionparticipants.label=Participants in session
+session.sessionParticipants.label=Participants in session
 
 # Fee state related messages
-feestate.label=Fee state
-feestate.multiple.label=Fee states
-feestate.name.label=Name
-feestate.isdefaultfee.label=Is default fee
+feeState.label=Fee state
+feeState.multiple.label=Fee states
+feeState.name.label=Name
+feeState.isDefaultFee.label=Is default fee
 
 # Fee amount related messages
-feeamount.label=Fee amount
-feeamount.multiple.label=Fee amounts
-feeamount.enddate.label=End date
-feeamount.numdaysstart.label=Nr of days start
-feeamount.numdaysend.label=Nr of days end
-feeamount.numdays.label=Nr of days
-feeamount.feeamount.label=Fee amount
+feeAmount.label=Fee amount
+feeAmount.multiple.label=Fee amounts
+feeAmount.endDate.label=End date
+feeAmount.numDaysStart.label=Nr of days start
+feeAmount.numDaysEnd.label=Nr of days end
+feeAmount.numDays.label=Nr of days
+feeAmount.feeAmount.label=Fee amount
 
 # Participant state related messages
-participantstate.label=Participant state
-participantstate.multiple.label=Participant states
-participantstate.state.label=State
+participantState.label=Participant state
+participantState.multiple.label=Participant states
+participantState.state.label=State
 
 # Participant date related messages
-participantdate.label=Participant
-participantdate.multiple.label=Participants
-participantdate.state.label=Current state
-participantdate.feestate.label=Current fee state
-participantdate.dateadded.label=Event date added
-participantdate.invitationletter.label=Requested
-participantdate.invitationlettersent.label=Sent
-participantdate.inventationletter.label=Inventation letter
-participantdate.lowerfeerequested.label=Requested
-participantdate.lowerfeeanswered.label=Answered
-participantdate.lowerfee.label=Lower fee
-participantdate.lowerfeetext.label=Lower fee text
-participantdate.registrationinfo.label=Registration info
-participantdate.personalinfo.label=Personal info
-participantdate.extra.label=Extra
-participantdate.attendance.label=Attendance
-participantdate.volunteering.label=Volunteering
-participantdate.volunteering.select.label=Would like to be
-participantdate.volunteering.add.label=as volunteer
-participantdata.would.like.to.add.message=This user is not registered for {0}. Would you like to add this user as a participant?
+participantDate.label=Participant
+participantDate.multiple.label=Participants
+participantDate.state.label=Current state
+participantDate.feeState.label=Current fee state
+participantDate.dateAdded.label=Event date added
+participantDate.invitationLetter.label=Requested
+participantDate.invitationLetterSent.label=Sent
+participantDate.inventationLetter.label=Inventation letter
+participantDate.lowerFeeRequested.label=Requested
+participantDate.lowerFeeAnswered.label=Answered
+participantDate.lowerFee.label=Lower fee
+participantDate.lowerFeeText.label=Lower fee text
+participantDate.registration.info.label=Registration info
+participantDate.personal.info.label=Personal info
+participantDate.extra.label=Extra
+participantDate.attendance.label=Attendance
+participantDate.volunteering.label=Volunteering
+participantDate.volunteering.select.label=Would like to be
+participantDate.volunteering.add.label=as volunteer
+participantDate.would.like.to.add.message=This user is not registered for {0}. Would you like to add this user as a participant?
 
 # Extra related messages
 extra.label=Extra
@@ -278,35 +278,35 @@ extra.extra.label=Extra
 paper.label=Paper
 paper.multiple.label=Papers
 paper.title.label=Title
-paper.coauthors.label=Co-authors
+paper.coAuthors.label=Co-authors
 paper.abstr.label=Abstract
 paper.comment.label=Additional comments
-paper.networkproposal.label=Network proposal
-paper.sessionproposal.label=Session proposal
-paper.proposaldescription.label=Proposal description
+paper.networkProposal.label=Network proposal
+paper.sessionProposal.label=Session proposal
+paper.proposalDescription.label=Proposal description
 paper.state.label=Paper state
 paper.file.label=Uploaded paper
 paper.file.upload.label=Upload paper
-paper.equipmentcomment.label=Equipment comment
-paper.networkssessionsinfo.label=Networks & Sessions information
+paper.equipmentComment.label=Equipment comment
+paper.networks.sessions.info.label=Networks & Sessions information
 
 # Email code related messages
-emailcode.label=Email code
-emailcode.multiple.label=Email codes
-emailcode.code.label=Code
-emailcode.description.label=Description
-emailcode.groovyscript.label=Groovy script
+emailCode.label=Email code
+emailCode.multiple.label=Email codes
+emailCode.code.label=Code
+emailCode.description.label=Description
+emailCode.groovyScript.label=Groovy script
 
 # Email code related messages
-emailtemplate.label=Email template
-emailtemplate.multiple.label=Email templates
-emailtemplate.usedby.label=Used by
-emailtemplate.subject.label=Subject
-emailtemplate.body.label=Body
-emailtemplate.sender.label=Sender
-emailtemplate.comment.label=Comment
-emailtemplate.testemail.label=Send test email to
-emailtemplate.testaftersave.label=Test email after save
+emailTemplate.label=Email template
+emailTemplate.multiple.label=Email templates
+emailTemplate.usedBy.label=Used by
+emailTemplate.subject.label=Subject
+emailTemplate.body.label=Body
+emailTemplate.sender.label=Sender
+emailTemplate.comment.label=Comment
+emailTemplate.testEmail.label=Send test email to
+emailTemplate.testAfterSave.label=Test email after save
 
 # Other relevant messages
 email.label=E-mail
