--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -1,19 +1,19 @@
-default.doesnt.match.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] komt niet overeen met het vereiste patroon [{3}]
-default.invalid.url.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] is geen geldige URL
-default.invalid.creditCard.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] is geen geldig credit card nummer
-default.invalid.email.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] is geen geldig e-mailadres
-default.invalid.range.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] valt niet in de geldige waardenreeks van [{3}] tot [{4}]
-default.invalid.size.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] valt niet in de geldige grootte van [{3}] tot [{4}]
-default.invalid.max.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] overschrijdt de maximumwaarde [{3}]
-default.invalid.min.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] is minder dan de minimumwaarde [{3}]
-default.invalid.max.size.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] overschrijdt de maximumgrootte van [{3}]
-default.invalid.min.size.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] is minder dan minimumgrootte van [{3}]
-default.invalid.validator.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] is niet geldig
-default.not.inlist.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] komt niet voor in de lijst [{3}]
-default.blank.message=Attribuut [{0}] van entiteit [{1}] mag niet leeg zijn
-default.not.equal.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] mag niet gelijk zijn aan [{3}]
-default.null.message=Attribuut [{0}] van entiteit [{1}] mag niet leeg zijn
-default.not.unique.message=Attribuut [{0}] van entiteit [{1}] met waarde [{2}] moet uniek zijn
+default.doesnt.match.message={0} met waarde "{2}" komt niet overeen met het vereiste patroon "{3}"
+default.invalid.url.message={0} met waarde "{2}" is geen geldige URL
+default.invalid.creditCard.message={0} met waarde "{2}" is geen geldig credit card nummer
+default.invalid.email.message={0} met waarde "{2}" is geen geldig e-mailadres
+default.invalid.range.message={0} met waarde "{2}" valt niet in de geldige waardenreeks van {3} tot {4}
+default.invalid.size.message={0} met waarde "{2}" valt niet in de geldige grootte van {3} tot {4}
+default.invalid.max.message={0} met waarde "{2}" overschrijdt de maximumwaarde {3}
+default.invalid.min.message={0} met waarde "{2}" is minder dan de minimumwaarde {3}
+default.invalid.max.size.message={0} met waarde "{2}" overschrijdt de maximumgrootte van {3}
+default.invalid.min.size.message={0} met waarde "{2}" is minder dan minimumgrootte van {3}
+default.invalid.validator.message={0} met waarde "{2}" is niet geldig
+default.not.inlist.message={0} met waarde "{2}" komt niet voor in de lijst {3}
+default.blank.message={0} mag niet leeg zijn
+default.not.equal.message={0} met waarde "{2}" mag niet gelijk zijn aan "{3}"
+default.null.message={0} mag niet leeg zijn
+default.not.unique.message={0} met waarde "{2}" moet uniek zijn
 
 default.paginate.prev=Vorige
 default.paginate.next=Volgende
@@ -130,57 +130,57 @@ setting.property.label=Eigenschap
 setting.value.label=Waarde
 
 # Requestmap related messages
-requestmap.label=Verzoek
-requestmap.multiple.label=Verzoek
-requestmap.url.label=URL
-requestmap.configattribute.label=Configuratie waarde
+requestMap.label=Verzoek
+requestMap.multiple.label=Verzoek
+requestMap.url.label=URL
+requestMap.configAttribute.label=Configuratie waarde
 
 # User related messages
 user.label=Gebruiker
 user.multiple.label=Gebruikers
 user.email.label=Email
-user.lastname.label=Achternaam
-user.firstname.label=Voornaam
+user.lastName.label=Achternaam
+user.firstName.label=Voornaam
 user.gender.label=Geslacht
 user.address.label=Adres
 user.city.label=Stad
 user.country.label=Land
 user.language.label=Taal
 user.password.label=Wachtwoord
-user.passwordagain.label=Wachtwoord nogmaals
+user.passwordAgain.label=Wachtwoord nogmaals
 user.password.nomatch=De wachtwoorden zijn niet hetzelfde.
 user.phone.label=Telefoon
 user.fax.label=Fax
 user.mobile.label=Mobiel nummer
 user.organisation.label=Organisatie
 user.department.label=Afdeling
-user.extrainfo.label=Extra informatie
-user.dateadded.label=Datum toegevoegd
+user.extraInfo.label=Extra informatie
+user.dateAdded.label=Datum toegevoegd
 
 # Event related messages
 event.label=Evenement
 event.multiple.label=Evenementen
 event.list=Beschikbare evenementen
 event.code.label=Code
-event.shortname.label=Korte naam
-event.longname.label=Lange naam
+event.shortName.label=Korte naam
+event.longName.label=Lange naam
 event.type.label=Type
 
 # Event date related messages
 eventdate.label=Evenement datum
 eventdate.multiple.label=Data
-eventdate.yearcode.label=Jaar code
-eventdate.startdate.label=Start datum
-eventdate.enddate.label=Eind datum
-eventdate.dateastext.label=Datum als tekst
+eventdate.yearCode.label=Jaar code
+eventdate.startDate.label=Start datum
+eventdate.endDate.label=Eind datum
+eventdate.dateAsText.label=Datum als tekst
 eventdate.description.label=Beschrijving
-eventdate.longdescription.label=Lange beschrijving
+eventdate.longDescription.label=Lange beschrijving
 
 # Day related messages
 day.label=Dag
 day.multiple.label=Dagen
 day.day.label=Dag
-day.daynumber.label=Dag nummer
+day.dayNumber.label=Dag nummer
 
 # Network related messages
 network.label=Netwerk
@@ -188,14 +188,14 @@ network.multiple.label=Netwerken
 network.name.label=Naam
 network.comment.label=Commentaar
 network.url.label=URL
-network.showonline.label=Online weergeven
-network.showinternal.label=Intern weergeven
+network.showOnline.label=Online weergeven
+network.showInternal.label=Intern weergeven
 network.chairs.label=Chairs
 network.not.in.participants.label=Deelnemer niet in netwerk
 
 # Network chair related messages
-networkchair.chair.label=Chair
-networkchair.ismainchair.label=Hoofd chair
+networkChair.chair.label=Chair
+networkChair.isMainChair.label=Hoofd chair
 
 # Title related messages
 title.label=Titel
@@ -205,9 +205,9 @@ title.title.label=Titel
 # Room related messages
 room.label=Kamer
 room.multiple.label=Kamers
-room.roomname.label=Kamer naam
-room.roomnumber.label=Kamer nummer
-room.noofseats.label=Aantal plaatsen
+room.roomName.label=Kamer naam
+room.roomNumber.label=Kamer nummer
+room.noOfSeats.label=Aantal plaatsen
 room.comment.label=Commentaar
 
 # Equipment related messages
@@ -216,7 +216,7 @@ equipment.multiple.label=Apparatuur
 equipment.code.label=Code
 equipment.equipment.label=Apparatuur
 equipment.description.label=Beschrijving
-equipment.imageurl.label=Afbeelding URL
+equipment.imageUrl.label=Afbeelding URL
 
 # Session related messages
 session.label=Sessie
@@ -224,49 +224,49 @@ session.multiple.label=Sessies
 session.code.label=Code
 session.name.label=Naam
 session.comment.label=Commentaar
-session.sessionparticipants.label=Deelnemers in sessie
+session.sessionParticipants.label=Deelnemers in sessie
 
 # Fee state related messages
-feestate.label=Vergoedings status
-feestate.multiple.label=Vergoedings statussen
-feestate.name.label=Naam
-feestate.isdefaultfee.label=Is standaard vergoeding
+feeState.label=Vergoedings status
+feeState.multiple.label=Vergoedings statussen
+feeState.name.label=Naam
+feeState.isDefaultFee.label=Is standaard vergoeding
 
 # Fee amount related messages
-feeamount.label=Vergoedings bedrag
-feeamount.multiple.label=Vergoedings bedragen
-feeamount.enddate.label=Eind datum
-feeamount.numdaysstart.label=Aantal dagen start
-feeamount.numdaysend.label=Aantal dagen eind
-feeamount.numdays.label=Aantal dagen
-feeamount.feeamount.label=Vergoedings bedrag
+feeAmount.label=Vergoedings bedrag
+feeAmount.multiple.label=Vergoedings bedragen
+feeAmount.endDate.label=Eind datum
+feeAmount.numDaysStart.label=Aantal dagen start
+feeAmount.numDaysEnd.label=Aantal dagen eind
+feeAmount.numDays.label=Aantal dagen
+feeAmount.feeAmount.label=Vergoedings bedrag
 
 # Participant state related messages
-participantstate.label=Deelnemer status
-participantstate.multiple.label=Deelnemer statussen
-participantstate.state.label=Status
+participantState.label=Deelnemer status
+participantState.multiple.label=Deelnemer statussen
+participantState.state.label=Status
 
 # Participant date related messages
-participantdate.label=Deelnemer
-participantdate.multiple.label=Deelnemers
-participantdate.state.label=Huidige status
-participantdate.feestate.label=Huidige vergoedings status
-participantdate.dateadded.label=Evenement datum toegevoegd
-participantdate.invitationletter.label=Aangevraagd
-participantdate.invitationlettersent.label=Verzonden
-participantdate.inventationletter.label=Uitnodigings brief
-participantdate.lowerfeerequested.label=Aangevraagd
-participantdate.lowerfeeanswered.label=Beantwoord
-participantdate.lowerfee.label=Lagere vergoeding
-participantdate.lowerfeetext.label=Lagere vergoeding tekst
-participantdate.registrationinfo.label=Registratie info
-participantdate.personalinfo.label=Persoonlijke info
-participantdate.extra.label=Extra
-participantdate.attendance.label=Aaanwezigheid
-participantdate.volunteering.label=Vrijwilliger mogelijkheden
-participantdate.volunteering.select.label=Zou willen zijn
-participantdate.volunteering.add.label=als vrijwilliger
-participantdata.would.like.to.add.message=Deze gebruiker is nog niet geregistreerd voor {0}. Wilt u deze gebruiker als deelnemer toevoegen?
+participantDate.label=Deelnemer
+participantDate.multiple.label=Deelnemers
+participantDate.state.label=Huidige status
+participantDate.feeState.label=Huidige vergoedings status
+participantDate.dateAdded.label=Evenement datum toegevoegd
+participantDate.invitationLetter.label=Aangevraagd
+participantDate.invitationLetterSent.label=Verzonden
+participantDate.inventationLetter.label=Uitnodigings brief
+participantDate.lowerFeeRequested.label=Aangevraagd
+participantDate.lowerFeeAnswered.label=Beantwoord
+participantDate.lowerFee.label=Lagere vergoeding
+participantDate.lowerFeeText.label=Lagere vergoeding tekst
+participantDate.registration.info.label=Registratie info
+participantDate.personal.info.label=Persoonlijke info
+participantDate.extra.label=Extra
+participantDate.attendance.label=Aaanwezigheid
+participantDate.volunteering.label=Vrijwilliger mogelijkheden
+participantDate.volunteering.select.label=Zou willen zijn
+participantDate.volunteering.add.label=als vrijwilliger
+participantData.would.like.to.add.message=Deze gebruiker is nog niet geregistreerd voor {0}. Wilt u deze gebruiker als deelnemer toevoegen?
 
 # Extra related messages
 extra.label=Extra
@@ -277,35 +277,35 @@ extra.extra.label=Extra
 paper.label=Document
 paper.multiple.label=Documenten
 paper.title.label=Titel
-paper.coauthors.label=Co-auteurs
+paper.coAuthors.label=Co-auteurs
 paper.abstr.label=Korte inhoud
 paper.comment.label=Overig commentaar
-paper.networkproposal.label=Netwerk voorstel
-paper.sessionproposal.label=Sessie voorstel
-paper.proposaldescription.label=Voorstel beschrijving
+paper.networkProposal.label=Netwerk voorstel
+paper.sessionProposal.label=Sessie voorstel
+paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
-paper.file.label=Geüploade document
+paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
-paper.equipmentcomment.label=Apparatuur commentaar
-paper.networkssessionsinfo.label=Netwerken & Sessies informatie
+paper.equipmentComment.label=Apparatuur commentaar
+paper.networks.sessions.info.label=Netwerken & Sessies informatie
 
 # Email code related messages
-emailcode.label=E-mail code
-emailcode.multiple.label=E-mail codes
-emailcode.code.label=Code
-emailcode.description.label=Beschrijving
-emailcode.groovyscript.label=Groovy script
+emailCode.label=E-mail code
+emailCode.multiple.label=E-mail codes
+emailCode.code.label=Code
+emailCode.description.label=Beschrijving
+emailCode.groovyScript.label=Groovy script
 
 # Email code related messages
-emailtemplate.label=E-mail sjabloon
-emailtemplate.multiple.label=E-mail sjablonen
-emailtemplate.usedby.label=Gebruikt door
-emailtemplate.subject.label=Onderwerp
-emailtemplate.body.label=Bericht
-emailtemplate.sender.label=Afzender
-emailtemplate.comment.label=Commentaar
-emailtemplate.testemail.label=Verstuur test e-mail naar
-emailtemplate.testaftersave.label=Na opslaan e-mail testen
+emailTemplate.label=E-mail sjabloon
+emailTemplate.multiple.label=E-mail sjablonen
+emailTemplate.usedBy.label=Gebruikt door
+emailTemplate.subject.label=Onderwerp
+emailTemplate.body.label=Bericht
+emailTemplate.sender.label=Afzender
+emailTemplate.comment.label=Commentaar
+emailTemplate.testEmail.label=Verstuur test e-mail naar
+emailTemplate.testAfterSave.label=Na opslaan e-mail testen
 
 # Other relevant messages
 email.label=E-mail
